# QWebBrowser

./: .gitignore  CMakeLists.txt  README.md  main.cpp  resources.qrc  webbrowserressources.qrc
include/: dataitem.hpp  dataitemmanager.hpp  historyview.hpp  style.hpp  webbrowser.hpp  webview.hpp
src/: dataitemmanager.cpp  dataitemmanager.hpp  historyview.cpp  historyview.hpp  main.cpp  style.hpp  webbrowser.cpp  webbrowser.hpp  webview.cpp  webview.hpp
